--- a/css/less/style.scss
+++ b/css/less/style.scss
@@ -872,7 +872,9 @@ button:focus{
 	overflow: hidden;
 	background: #fff;
 
-	
+	z-index: -9999;
+	overflow: hidden;
+	opacity: 0;
 
 	-webkit-transition: all .25s ease;
 	   -moz-transition: all .25s ease;
@@ -883,15 +885,6 @@ button:focus{
 		border: 0;
 		overflow: hidden;
 		height: auto;
-	}
-	.blaaa{
-		position: absolute;
-		left: 0;
-		right: 0;
-		top: 0;
-		bottom: 0;
-		background: black;
-		opacity: 0.1;
 	}
 }
 
